--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -56,9 +55,7 @@
     <button onclick="speakWord()">Ouvir Palavra</button>
   </div>
   <div class="current-word" id="currentWord">---</div>
-  <div class="word-list" id="wordList"></div>
-
-  <script>
+  <div class="word-list" id="wordList"></div>  <script>
     const words = [
       "back","bag","bat","bed","Ben","bit","Bib","Bid","Big","Bin","Bob","Bog","Box","Bud","Bug","Bun","Bus","But",
       "Cab","Can","Cap","Cat","Cob","Cod","Cop","Cot","Cub","Cud","Dab","Dad","Dan","Deck","Did","Dig","Dim",
@@ -119,6 +116,5 @@
     }
 
     renderWords();
-  </script>
-</body>
+  </script></body>
 </html>
